--- a/FileIO/Dockerfile
+++ b/FileIO/Dockerfile
@@ -1,5 +1,5 @@
 FROM hseeberger/scala-sbt:8u222_1.3.5_2.13.1
-EXPOSE 8080 8080
-WORKDIR /stratego
-ADD . /stratego
+EXPOSE 8082 8082
+WORKDIR /fileIO
+ADD . /fileIO
 CMD sbt run
