finished docker (really)

--- a/FileIO/Dockerfile
+++ b/FileIO/Dockerfile
@@ -1,5 +1,5 @@
 FROM hseeberger/scala-sbt:8u222_1.3.5_2.13.1
-EXPOSE 8082 8082
-WORKDIR /fileIO
-ADD . /fileIO
+EXPOSE 8081
+WORKDIR /FileIO
+ADD . /FileIO
 CMD sbt run
