--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,28 @@ services:
       - "8082:8082"
     stdin_open: true
     tty: true
+  fileiodb:
+    container_name: "fileiodb"
+    image: postgres:latest
+    restart: always
+    expose:
+      - "5432"
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: Softwarearchitektur
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 12345678
   fileio:
     container_name: "fileio_service"
     build:
       context: ./FileIO
+    depends_on:
+      - fileiodb
     ports:
       - "8081:8081"
+    environment:
+      - DATABASE_HOST=fileiodb:5432
   root:
     container_name: "root_service"
     build: .
