--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ scala:
 
 script:
 - sbt clean coverage test coverageReport
+- cd Tui
+- sbt clean coverage test coverageReport
+- cd ../FileIO
+- sbt clean coverage test coverageReport
 
 after_success:
+- sbt coverageReport coveralls
+- cd Tui
+- sbt coverageReport coveralls
+- cd ../FileIO
 - sbt coverageReport coveralls
